--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
         <nav class="nav">
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link {=$highlight-act}" href="/1-gallery.html"
+              <a class="nav-link {=$highlight-act}" href="./1-gallery.html"
                 >1-gallery</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link {=$highlight-curr}" href="/2-form.html"
+              <a class="nav-link {=$highlight-curr}" href="./2-form.html"
                 >2-form</a
               >
             </li>
