--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,10 @@
         <nav class="nav">
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link {=$highlight-act}" href="./1-gallery.html"
-                >1-gallery</a
-              >
+              <a class="nav-link" href="./1-gallery.html">1-gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {=$highlight-curr}" href="./2-form.html"
-                >2-form</a
-              >
+              <a class="nav-link" href="./2-form.html">2-form</a>
             </li>
           </ul>
         </nav>
